--- a/OctoPodium/Base.lproj/Main.storyboard
+++ b/OctoPodium/Base.lproj/Main.storyboard
@@ -1510,7 +1510,7 @@
                                 <rect key="frame" x="0.0" y="130" width="320" height="220"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="osO-25-Xz4">
-                                        <rect key="frame" x="0.0" y="35" width="320" height="150"/>
+                                        <rect key="frame" x="0.0" y="55" width="320" height="110.5"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iAj-Eu-jRH">
                                                 <rect key="frame" x="120.5" y="0.0" width="80" height="80"/>
@@ -1567,39 +1567,20 @@
                                                     </mask>
                                                 </variation>
                                             </view>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fab-dJ-F4P">
-                                                <rect key="frame" x="40" y="120.5" width="240" height="32"/>
-                                                <color key="backgroundColor" red="0.75221354166666665" green="0.0" blue="0.085464015151515152" alpha="1" colorSpace="calibratedRGB"/>
-                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                                <inset key="contentEdgeInsets" minX="7" minY="7" maxX="7" maxY="7"/>
-                                                <state key="normal" title="Sign out">
-                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                </state>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                        <real key="value" value="4"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                </userDefinedRuntimeAttributes>
-                                                <connections>
-                                                    <action selector="signout" destination="sek-Mi-PiW" eventType="touchUpInside" id="3tE-fQ-vz7"/>
-                                                </connections>
-                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstItem="GyL-k8-m5h" firstAttribute="bottom" secondItem="fab-dJ-F4P" secondAttribute="top" constant="-10" id="0fN-50-bze"/>
                                             <constraint firstItem="iAj-Eu-jRH" firstAttribute="centerX" secondItem="osO-25-Xz4" secondAttribute="centerX" id="4OJ-Mt-rj6"/>
-                                            <constraint firstItem="fab-dJ-F4P" firstAttribute="centerX" secondItem="GyL-k8-m5h" secondAttribute="centerX" id="Q8b-Bf-LqN"/>
                                             <constraint firstAttribute="height" constant="150" id="XJL-RO-4Y1"/>
                                             <constraint firstItem="iAj-Eu-jRH" firstAttribute="top" secondItem="osO-25-Xz4" secondAttribute="top" id="Y6R-Uo-373"/>
-                                            <constraint firstItem="fab-dJ-F4P" firstAttribute="leading" secondItem="osO-25-Xz4" secondAttribute="leading" constant="40" id="ZKn-pC-m1U"/>
-                                            <constraint firstAttribute="trailing" secondItem="fab-dJ-F4P" secondAttribute="trailing" constant="40" id="bvN-lp-f6q"/>
                                             <constraint firstItem="GyL-k8-m5h" firstAttribute="top" secondItem="iAj-Eu-jRH" secondAttribute="bottom" constant="10" id="hi1-si-dGK"/>
                                             <constraint firstItem="GyL-k8-m5h" firstAttribute="centerX" secondItem="iAj-Eu-jRH" secondAttribute="centerX" id="lCg-cc-fYd"/>
                                             <constraint firstAttribute="bottom" secondItem="GyL-k8-m5h" secondAttribute="bottom" id="qG3-kH-7t6"/>
+                                            <constraint firstAttribute="bottom" secondItem="GyL-k8-m5h" secondAttribute="bottom" id="thC-my-2pZ"/>
                                         </constraints>
                                         <variation key="default">
                                             <mask key="constraints">
+                                                <exclude reference="XJL-RO-4Y1"/>
                                                 <exclude reference="qG3-kH-7t6"/>
                                             </mask>
                                         </variation>
@@ -1636,7 +1617,9 @@
                             </mask>
                         </variation>
                     </view>
-                    <navigationItem key="navigationItem" title="Github Account" id="AYN-9e-aL5"/>
+                    <navigationItem key="navigationItem" title="Github Account" id="AYN-9e-aL5">
+                        <barButtonItem key="rightBarButtonItem" systemItem="trash" id="b2e-8a-dOb"/>
+                    </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="userBackgroundImageView" destination="nht-E4-cEY" id="6ke-av-QjG"/>
