--- a/OctoPodium/CustomViews/GithubLoadingView.xib
+++ b/OctoPodium/CustomViews/GithubLoadingView.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GithubLoadingView" customModule="OctoPodium" customModuleProvider="target">
             <connections>
                 <outlet property="loadingIndicatorImageView" destination="6ZZ-yB-lKC" id="BDh-Dg-tvb"/>
                 <outlet property="staticImage" destination="6I0-Fb-Hv2" id="cMN-qO-zKX"/>
+                <outlet property="view" destination="iN0-l3-epB" id="kfL-5L-D8x"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
