--- a/OctoPodium/CustomViews/LanguageImageView.xib
+++ b/OctoPodium/CustomViews/LanguageImageView.xib
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LanguageImageView" customModule="OctoPodium" customModuleProvider="target">
             <connections>
-                <outlet property="container" destination="iN0-l3-epB" id="m8L-gH-ead"/>
                 <outlet property="imageView" destination="SkL-5K-l6f" id="P76-lM-3vu"/>
                 <outlet property="label" destination="evv-jF-Rx8" id="ebl-U3-o4Z"/>
+                <outlet property="view" destination="iN0-l3-epB" id="SAK-dD-qRb"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
